--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,6 +1,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <html>
 <head>
+	<title>Raspberry Pi - Room Monitoring</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="highstock.js"></script>
     <script src="main.js"></script>
